--- a/my-index.html
+++ b/my-index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Huddle</title>
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/style02.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -19,25 +19,32 @@
     />
   </head>
   <body>
-    <header>
-      <h1>Huddle</h1>
-    </header>
     <main>
-      <div>
+      <header>
         <img
-        src="C:\Users\mccar\Desktop\Front_end_Practice\huddle-landing-page-with-single-introductory-section-master\css\images\illustration-mockups.svg""
-        alt="Illustration of webpage and mobile app design." />
-      </div>
+          src="C:\Users\mccar\Desktop\Front_end_Practice\huddle-landing-page-with-single-introductory-section-master\css\images\logo.svg"
+          alt="Huddle logo, thought bubble."
+        />
+      </header>
       <section class="main-content">
-        <h2>Build The Community Your Fans Will Love</h2>
-        <p>
-          Huddle re-imagines the way we build communities. You have a voice, but
-          so does your audience. Create connections with your users as you
-          engage in genuine discussion.
-        </p>
-        <button>Register</button>
+        <div class="webpage-illustration">
+          <img
+          src="C:\Users\mccar\Desktop\Front_end_Practice\huddle-landing-page-with-single-introductory-section-master\css\images\illustration-mockups.svg""
+          alt="Illustration of webpage and mobile app design." />
+        </div>
+        <div class="mission-statement">
+          <h2>Build The Community Your Fans Will Love</h2>
+          <p>
+            Huddle re-imagines the way we build communities. You have a voice,
+            but so does your audience. Create connections with your users as you
+            engage in genuine discussion.
+          </p>
+          <button class="register">Register</button>
+          <div class="social-icons">
+            <p>Placeholder Icons</p>
+          </div>
+        </div>
       </section>
     </main>
-    <footer></footer>
   </body>
 </html>
