add social media icons

--- a/my-index.html
+++ b/my-index.html
@@ -41,10 +41,13 @@
           </p>
           <button class="register">Register</button>
           <div class="social-icons">
-            <p>Placeholder Icons</p>
+            <i class="fa-brands fa-facebook"></i>
+            <i class="fa-brands fa-twitter"></i>
+            <i class="fa-brands fa-instagram"></i>
           </div>
         </div>
       </section>
     </main>
+    <script src="https://kit.fontawesome.com/651b41588e.js" crossorigin="anonymous"></script>
   </body>
 </html>
